--- a/ads/Dockerfile
+++ b/ads/Dockerfile
@@ -4,9 +4,9 @@ FROM python:3
 ADD ads.py /ads.py
 ADD requirements.txt /requirements.txt
 
-RUN pip install requirements.txt
-RUN export FLASK_APP=exclusion.py
+RUN pip install -r requirements.txt
+RUN export FLASK_APP=ads.py
 EXPOSE 8081
 
 
-CMD ["flask", "run"]
+CMD ["python", "ads.py"]
