--- a/exclusion/Dockerfile
+++ b/exclusion/Dockerfile
@@ -1,12 +1,12 @@
 FROM alpine
 FROM python:3
 
-ADD esclusion.py /exclusion.py
+ADD exclusion.py /exclusion.py
 ADD requirements.txt /requirements.txt
 
-RUN pip install requirements.txt
+RUN pip install -r requirements.txt
 RUN export FLASK_APP=exclusion.py
 EXPOSE 8082
 
 
-CMD ["flask", "run"]
+CMD ["python", "exclusion.py"]
