--- a/matching/Dockerfile
+++ b/matching/Dockerfile
@@ -4,9 +4,9 @@ FROM python:3
 ADD matching.py /matching.py
 ADD requirements.txt /requirements.txt
 
-RUN pip install requirements.txt
+RUN pip install -r requirements.txt
 RUN export FLASK_APP=matching.py
 EXPOSE 8084
 
 
-CMD ["flask", "run"]
+CMD ["python", "matching.py"]
