--- a/pricing/Dockerfile
+++ b/pricing/Dockerfile
@@ -4,9 +4,9 @@ FROM python:3
 ADD pricing.py /pricing.py
 ADD requirements.txt /requirements.txt
 
-RUN pip install requirements.txt
+RUN pip install -r requirements.txt
 RUN export FLASK_APP=pricing.py
 EXPOSE 8086
 
 
-CMD ["flask", "run"]
+CMD ["python", "pricing.py"]
