--- a/query/Dockerfile
+++ b/query/Dockerfile
@@ -1,12 +1,11 @@
 FROM alpine
 FROM python:3
 
-ADD querry.py /querry.py
+ADD query.py /query.py
 ADD requirements.txt /requirements.txt
 
-RUN pip install requirements.txt
-RUN export FLASK_APP=query.py
-EXPOSE 80
+RUN pip install -r requirements.txt
+RUN export FLASK_APP='query.py'
+EXPOSE 8080
 
-
-CMD ["flask", "run"]
+CMD ["python", "query.py"]
