--- a/ranking/Dockerfile
+++ b/ranking/Dockerfile
@@ -4,9 +4,9 @@ FROM python:3
 ADD ranking.py /ranking.py
 ADD requirements.txt /requirements.txt
 
-RUN pip install requirements.txt
+RUN pip install -r requirements.txt
 RUN export FLASK_APP=ranking.py
 EXPOSE 8085
 
 
-CMD ["flask", "run"]
+CMD ["python", "ranking.py"]
