--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\ProgramData\\Anaconda2\\envs\\dog-project\\python.exe"
+    "python.pythonPath": "/anaconda2/envs/cloud/bin/python"
 }
